# notion-ticket-manager

./: .env.example  .flake8  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt
src/notion_ticket_manager/: cli.py
src/notion_ticket_manager/api/: notion_client.py
src/notion_ticket_manager/config/: environment.py
src/notion_ticket_manager/services/: git_service.py  ticket_service.py
